--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2486,7 +2486,7 @@ button:not(.close-modal):not([onclick*="changeTrade"]):not([onclick*="changeColo
   }
   
   .section {
-    padding: 40px 0;
+    padding: 0 !important;
     overflow: hidden !important;
   }
   
