--- a/src/_includes/sections/faq.njk
+++ b/src/_includes/sections/faq.njk
@@ -32,7 +32,7 @@
         </div>
 
         <div class="faq-cta">
-          <p>Vous avez une autre question ? <a href="tel:{{ identity.PHONE_TEL or identity.CTA_PRIMARY_TEL }}" style="color: {{ accentColor }};">Appelez-nous au {{ identity.PHONE_PRETTY or identity.PHONE_TEL }}</a></p>
+          <p>Vous avez une autre question ? <a href="tel:{{ identity.PHONE_TEL or identity.CTA_PRIMARY_TEL }}" class="faq-phone-link" style="color: {{ accentColor }} !important;">Appelez-nous au {{ identity.PHONE_PRETTY or identity.PHONE_TEL }}</a></p>
         </div>
       </div>
     </section>
